# Punitentiary

./: Procfile  manage.py  pyproject.toml  requirements.txt
main_app/: admin.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_auto_20200207_2254.py  0003_auto_20200207_2256.py  0004_auto_20200207_2331.py  0005_auto_20200207_2338.py  0006_auto_20200211_2027.py
main_app/static/css/: style.css
main_app/static/js/: main.js
main_app/templates/: base.html  home.html
main_app/templates/jokes/: detail.html
main_app/templates/main_app/: joke_confirm_delete.html  joke_form.html
main_app/templates/registration/: login.html
punitentiary/: asgi.py  settings.py  urls.py  wsgi.py
