[tool.poetry]
name = "punitentiary"
version = "0.1.0"
description = ""
authors = ["miniglock <davidbrin45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8.4"
Django = "^3.0.3"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
